--- a/ClientApp/ClientApp.csproj
+++ b/ClientApp/ClientApp.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Consignment\Consignment.csproj" />
     <ProjectReference Include="..\Draughts.ClientApp.Protobuf\Draughts.ClientApp.Protobuf.csproj" />
   </ItemGroup>
 
