--- a/Draughts.Server/Draughts.Server.csproj
+++ b/Draughts.Server/Draughts.Server.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Consignment\Consignment.csproj" />
+  </ItemGroup>
+
 </Project>
